syntax = "proto3";

import "google/protobuf/wrappers.proto";
package gapfiller;

enum RoyaltyTargetType {
    ROYALTY_TARGET_TYPE_UNKNOWN = 0;
    ROYALTY_TARGET_TYPE_CREATORS = 1;
    ROYALTY_TARGET_TYPE_FANOUT = 2;
    ROYALTY_TARGET_TYPE_SINGLE = 3;
}

enum SpecificationVersions {
    SPECIFICATION_VERSIONS_UNKNOWN = 0;
    SPECIFICATION_VERSIONS_V0 = 1;
    SPECIFICATION_VERSIONS_V1 = 2;
    SPECIFICATION_VERSIONS_V2 = 3;
}

enum SpecificationAssetClass {
    SPECIFICATION_ASSET_CLASS_UNKNOWN = 0;
    SPECIFICATION_ASSET_CLASS_FUNGIBLE_TOKEN = 1;
    SPECIFICATION_ASSET_CLASS_FUNGIBLE_ASSET = 2;
    SPECIFICATION_ASSET_CLASS_NFT = 3;
    SPECIFICATION_ASSET_CLASS_PRINTABLE_NFT = 4;
    SPECIFICATION_ASSET_CLASS_PROGRAMMABLE_NFT = 5;
    reserved 6 to 9;
    SPECIFICATION_ASSET_CLASS_MPL_CORE_ASSET = 10;
    SPECIFICATION_ASSET_CLASS_MPL_CORE_COLLECTION = 11;
}

enum OwnerType {
    OWNER_TYPE_UNKNOWN = 0;
    OWNER_TYPE_TOKEN = 1;
    OWNER_TYPE_SINGLE = 2;
}

enum ChainMutability {
    CHAIN_MUTABILITY_IMMUTABLE = 0;
    CHAIN_MUTABILITY_MUTABLE = 1;
}

enum TokenStandard {
    NON_FUNGIBLE = 0;
    FUNGIBLE_ASSET = 1;
    FUNGIBLE = 2;
    NON_FUNGIBLE_EDITION = 3;
    PROGRAMMABLE_NON_FUNGIBLE = 4;
    PROGRAMMABLE_NON_FUNGIBLE_EDITION = 5;
}

enum UseMethod {
    BURN = 0;
    MULTIPLE = 1;
    SINGLE = 2;
}

enum UpdateVersion {
    SEQUENCE = 0;
    WRITE_VERSION = 1;
}

message UpdateVersionValue {
    UpdateVersion type = 1;
    uint64 value = 2;
}

message Uses {
    UseMethod use_method = 1;
    uint64 remaining = 2;
    uint64 total = 3;
}

message ChainDataV1 {
    string name = 1;
    string symbol = 2;
    google.protobuf.UInt32Value edition_nonce = 3;  // Changed from u8 to uint32 as Protobuf does not have a u8 type
    bool primary_sale_happened = 4;
    TokenStandard token_standard = 5;
    Uses uses = 6;
    UpdateVersionValue update_version = 7;
    uint64 slot_updated = 8;
}

message AssetLeaf {
    bytes tree_id = 1;
    google.protobuf.BytesValue leaf = 2;
    google.protobuf.UInt64Value nonce = 3;
    google.protobuf.BytesValue data_hash = 4;
    google.protobuf.BytesValue creator_hash = 5;
    google.protobuf.UInt64Value leaf_seq = 6;
    UpdateVersionValue update_version = 7;
    uint64 slot_updated = 8;
}

message AssetCollection {
    DynamicBytesField collection = 1;
    DynamicBoolField is_collection_verified = 2;
    DynamicBytesField authority = 3;
}

message Creator {
    bytes creator = 1;
    bool creator_verified = 2;
    uint32 creator_share = 3; // Percentage
}

message SplMint {
    bytes pubkey = 1;
    int64 supply = 2;
    int32 decimals = 3;
    google.protobuf.BytesValue mint_authority = 4;
    google.protobuf.BytesValue freeze_authority = 5;
    bytes token_program = 6;
    int64 slot_updated = 7;
    uint64 write_version = 8;
}

// TODO: need also gapfill tokenAccounts and related indexes
message AssetDetails {
    // From AssetStaticDetails
    bytes pubkey = 1;
    SpecificationAssetClass specification_asset_class = 2;
    RoyaltyTargetType royalty_target_type = 3;
    uint64 slot_created = 4;
    google.protobuf.BytesValue edition_address = 5;

    // From AssetDynamicDetails as Tuples
    DynamicBoolField is_compressible = 6;
    DynamicBoolField is_compressed = 7;
    DynamicBoolField is_frozen = 8;
    DynamicUint64Field supply = 9;
    DynamicUint64Field seq = 10;
    DynamicBoolField is_burnt = 11;
    DynamicBoolField was_decompressed = 12;
    DynamicCreatorsField creators = 13;
    DynamicUint32Field royalty_amount = 14;
    DynamicBytesField authority = 15;
    DynamicBytesField owner = 16;
    DynamicBytesField delegate = 17;
    DynamicEnumField owner_type = 18;
    DynamicUint64Field owner_delegate_seq = 19;
    DynamicChainMutability chain_mutability = 20;
    DynamicUint64Field lamports = 21;
    DynamicBoolField executable = 22;
    DynamicStringField metadata_owner = 23;
    DynamicStringField url = 24;
    DynamicStringField raw_name = 25;
    DynamicStringField mpl_core_plugins = 26;
    DynamicStringField mpl_core_unknown_plugins = 27;
    DynamicUint64Field rent_epoch = 28;
    DynamicUint32Field num_minted = 29;
    DynamicUint32Field current_size = 30;
    DynamicUint32Field plugins_json_version = 31;

    AssetLeaf asset_leaf = 32;
    AssetCollection collection = 33;
    ChainDataV1 chain_data = 34;

    ClLeaf cl_leaf = 35;
    repeated ClItem cl_items = 36;

    // From TokenMetadataEdition
    EditionV1 edition = 37;
    MasterEdition master_edition = 38;
    OffchainData offchain_data = 39;

    DynamicStringField mpl_core_external_plugins = 40;
    DynamicStringField mpl_core_unknown_external_plugins = 41;
    DynamicStringField mint_extensions = 42;
    SplMint spl_mint = 43;
    DynamicBoolField is_current_owner = 44;
    bytes owner_record_pubkey = 45;
}

// This field is a cbor encoded object of RawBlock type depending on
// a "~1.17" version of the solana-transaction-status package
message RawBlock {
    bytes block = 1;
}

// Dynamic field messages
message DynamicBoolField {
    bool value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicUint64Field {
    uint64 value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicUint32Field {
    uint32 value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicBytesField {
    bytes value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicStringField {
    string value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicChainMutability {
    ChainMutability value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicEnumField {
    OwnerType value = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message DynamicCreatorsField {
    repeated Creator creators = 1;
    UpdateVersionValue update_version = 2;
    uint64 slot_updated = 3;
}

message ClLeaf {
    uint64 cli_leaf_idx = 1;
    bytes cli_tree_key = 2;
    uint64 cli_node_idx = 3;
}

message ClItem {
    uint64 cli_node_idx = 1;
    bytes cli_tree_key = 2;
    google.protobuf.UInt64Value cli_leaf_idx = 3;
    uint64 cli_seq = 4;
    uint64 cli_level = 5;
    bytes cli_hash = 6;
    uint64 slot_updated = 7;
}

message EditionV1 {
    bytes key = 1;
    bytes parent = 2;
    uint64 edition = 3;
    uint64 write_version = 4;
}

message MasterEdition {
    bytes key = 1;
    uint64 supply = 2;
    google.protobuf.UInt64Value max_supply = 3;
    uint64 write_version = 4;
}

message OffchainData {
    string url = 1;
    string metadata = 2;
}

// RangeRequest and AssetDetailsResponse for data synchronization
message RangeRequest {
    uint64 start_slot = 1;
    uint64 end_slot = 2;
}

message GetRawBlockRequest {
    uint64 slot = 1;
}

// Define the gRPC service
service GapFillerService {
    rpc GetAssetsUpdatedWithin(RangeRequest) returns (stream AssetDetails);
    rpc GetRawBlocksWithin(RangeRequest) returns (stream RawBlock);
    rpc GetRawBlock(GetRawBlockRequest) returns (RawBlock);
}
